Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-48713

[Ephemeral] Rev id going backwards for SyncWrite add

    XMLWordPrintable

Details

    • Untriaged
    • Centos 64-bit
    • 1
    • No

    Description

      Build: 7.0.2-6683

      Steps to reproduce:

      1. Create a doc using Sync_Write (MAJORITY)
      2. Delete the same doc using non-sync delete operation
      3. Create the same same using sync_write (MAJORITY)

      Observation:

      Rev Id of the document after step#3 remains 2 instead of '3'

      Impact

      Revision id (revid) is primarily used for XDCR conflict resolution. Documents which are affected by this issue may not have the correct update selected if the same key exists on an XDCR target Bucket.

      Ref: MB-48179

       

      Attachments

        Issue Links

          Activity

            People

              ashwin.govindarajulu Ashwin Govindarajulu
              ashwin.govindarajulu Ashwin Govindarajulu
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty